--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+a {
+  @apply text-primary-500;
+}
+
+a:hover,
+a:focus {
+  @apply text-primary-600 underline;
+}
