refactor: use fumadocs for documentation feature (#1677)

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+	--fd-banner-height: 4.5rem;
+}
+
 @layer base {
 	* {
 		@apply border-border;
@@ -21,4 +25,33 @@
 
 pre.shiki {
 	@apply mb-4 rounded-lg p-6;
+}
+
+#nd-sidebar {
+	@apply !bg-card top-[4.5rem] md:!h-[calc(100dvh-4.5rem)];
+
+	button[data-search-full] {
+		@apply bg-transparent;
+	}
+}
+
+#nd-page .prose {
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		a {
+			@apply !no-underline;
+		}
+	}
+}
+
+div[role="tablist"].bg-secondary {
+	@apply !bg-muted;
+}
+
+input[cmdk-input] {
+	@apply border-none focus-visible:ring-0;
 }
