fix: tailwind animate and button cursor style

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -2,8 +2,7 @@
 @import "fumadocs-ui/css/neutral.css";
 @import "fumadocs-ui/css/preset.css";
 @import "@repo/tailwind-config/theme.css";
-
-@plugin "tailwindcss-animate";
+@import "@repo/tailwind-config/tailwind-animate.css";
 
 @source "../node_modules/fumadocs-ui/dist/**/*.js";
 
